Potential Pog. Tried to fix alignment and it might work

--- a/index.css
+++ b/index.css
@@ -29,23 +29,24 @@
 .big-board {
   display: grid;
   position: absolute;
-  padding-top: 24.3%;
-  padding-left: 12%;
+  padding-top: 24.1%;
+  padding-left: 12.1vw;
 
   text-align: center;
-  top: 75px;
+  top: 0%;
 
-  grid-auto-rows: 2.55vw;
+  grid-auto-rows: 2.36vw;
   grid-template-columns: repeat(6, 1fr);
   grid-gap: 0.6vw;
-  column-gap: 2.23vw;
+  column-gap: 3.8%;
 }
 
 .drop-zone {
-  height: 2.2vw;
-  width: 10.9vw;
+  position: relative;
+  height: 2.12vw;
+  width: 10.6vw;
   text-align: left;
-  border: 2px solid magenta;
+  border: 0.1vw solid magenta;
   /*margin-top: 0vh;*/
 }
 
@@ -63,6 +64,7 @@
 .removeButton {
   padding-left: 4%;
   width: 10%;
+  height: 10%;
   max-width: 15px;
 }
 
@@ -81,7 +83,7 @@ body {
 }
 
 .container {
-  position: relative;
+  position: fixed;
   width: 100%;
   height: 100%;
   display: flex;
